[ADD] - add manifest and try pwa

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "host": "geo-ggmaps.vercel.app",
+  "short_name": "LT",
+  "name": "LocationTracker",
   "icons": [
     {
       "src": "favicon.ico",
