[CHORE] - improve file location and test

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "host": "geo-ggmaps.vercel.app",
-  "short_name": "LT",
+  "short_name": "LocationTracker",
   "name": "LocationTracker",
   "icons": [
     {
